# cc

./: .gitignore  README.md
.github/workflows/: build.yml  main.yml
ch01/: README.md
ch01/addition/: ENDIANESS.md
ch01/addition/base/: README.md  bin_calc.c  conversion.c  hex_calc.c  octal_calc.c
ch01/addition/bcd/: BCD.md  bcd.c  decimal.c
ch01/addition/big/: README.md  big.c
ch01/addition/gray/: README.md  gray.c  gray.html
ch01/addition/hamming/: README.md  hamming.c
ch01/discussion/: PLAN.md  README.md
ch01/discussion/advanced/: FOUNDATIONS.md
ch01/discussion/easy/: EXERCISES.md
ch01/sec1.1/: ROUTES.md
ch01/sec1.3.1/: 1-COMPLEMENT.md
ch01/sec1.3.4/: ENCODINGS.md  representation.c
ch01/sec1.6/: calls.c  calls.js  calls.py
ch01/sec1.7/koch/: README.md  koch.html  koch.py
ch01/sec1.7/numbers/: FIXED.md  FIXED23.md  FLOAT.md  FRAC.md  README.md  fixed.c  fixed23.c  float.py  frac.c  frac.py  radix.py  symb.c  symb.py
ch02/: README.md
ch02/addition/cuda/: CUDA.md  HIGHLEV.md  cuda.py  ecuda.py
ch02/addition/harvard/: README.md  harvard1.py  harvard2.py  harvard3.py  harvardvm4.py
ch02/addition/mems/: MEM2.md  MEM3.md  MEMO.md  POOL.md  mem2.c  mem3.c  memo.c  pool.c
ch02/addition/micro/: MICRO.md  micro.py
ch02/addition/perceptron/: PERCEPT.md  PROJECTS.md  README.md  viewer.html
ch02/addition/perceptron/percept/: percept.py
ch02/addition/vms/fm/: README.md  fm.py
ch02/addition/vms/sm/: README.md  ssm.c
ch02/addition/vms/vmo/: README.md  vmo.c
ch02/discussion/: PLAN.md  README.md  REFERENCE.md
ch02/discussion/advanced/: VMBUILD2.md
ch02/sec2.2.3/vm1/: README.md  vm1.c  vm1.h
ch02/sec2.2.4/regvm/: README.md
ch02/sec2.3/vm2/: Makefile  README.md  main.c  vm2.c  vm2.h
ch02/sec2.4.4/vm4/: VM4.md  vm4.c
ch02/sec2.4/mem/: ALIGNMENT.md  README.md  mem.c
ch02/sec2.4/vm3/: ASM.md  MAIN.md  MAKEFILE.md  Makefile  VM3.md  asm.py  main.c  vm3.c  vm3.h
ch02/sec2.5/: BUILD.md
ch02/sec2.5/neumann/: ALU.c  README.md
ch03/: README.md
ch03/addition/fern/: README.md  fern.py  optfern.py  viewer.html
ch03/addition/fuzzmut/: README.md  fuzzmut.c  fuzzmut.py  mut.html
ch03/addition/optimisation/: CONCEPT.md  GOTO.md
ch03/addition/sap/: INSTRUCTIONS.md  Makefile  PROJECTS.md  sap_vm.c  sap_vm.h  sap_vm_debug.c  sap_vm_debug_support.c  sap_vm_samples.c  sap_vm_test.c
ch03/addition/ttd/: README.md  fm.py  vm4a.c  vmo.c
ch03/discussion/: PLAN.md  PLAN2.md  README.md
ch03/sec3.4.3/confusion/: README.md  confusion.py
ch03/sec3.4/optimisation/: README.md
ch03/sec3.5.1/ci/: README.md  main.py
ch03/sec3.5.1/make/: Makefile  README.md  main.c
ch03/sec3.5.2/testvm/: README.md  testvm.py
ch03/sec3.5/simple/performance/: interpreter.py
ch03/sec3.5/simple/smoke/: database.py  procedures.py
ch03/sec3.5/tdd/: README.md
ch03/sec3.5/tdd/02/: database.py  tdd.py
ch03/sec3.5/tdd/03/: database.py  procedures.py
ch03/sec3.5/tests/smoke/: Makefile
ch03/sec3.8/simple/: README.md
ch03/sec3.8/simple/debug/: Makefile
ch03/sec3.8/simple/diag/: Makefile  README.md  dvm.py  log.txt
ch03/sec3.8/simple/static/: STATIC.md  static.py
ch03/sec3.8/tictactoe/: README.md  SOCIAL.md  minimax.py  q_learning.py
ch03/sec3.8/toolbox/: README.md
ch03/sec3.8/toolbox/asm/: Makefile
ch03/sec3.8/toolbox/diag/: diag.py
ch03/sec3.8/toolbox/prof/: README.md
ch03/sec3.8/toolbox/static/: regvm.py
ch04/: README.md
ch04/addition/display/: NAMING.md  NOTE.md  README.md
ch04/addition/display/c/: CMakeLists.txt  main.c  osd.c  osd.h
ch04/addition/files/: README.md
ch04/addition/files/micropython/: file_client.py  file_server.py
ch04/addition/games/vm/c/lisp/: CMakeLists.txt  README.md  display.c  display.h  lisp_builtins.c  lisp_vm.c  lisp_vm.h  main.c
ch04/addition/games/vm/c/pico/: CMakeLists.txt  main.c
ch04/addition/memory/: README.md
ch04/addition/optimisation/: README.md
ch04/addition/optimisation/c/: CMakeLists.txt  README.md  inv_baseline.c  inv_compare.c  inv_compfull.c  inv_framebuf.c
ch04/addition/optimisation/c/algo/: display.c  main.c
ch04/addition/optimisation/c/baseline/: main.c
ch04/addition/optimisation/c/framebuf/: main.c
ch04/addition/optimisation/c/prof/: main.c
ch04/addition/tinymos/: README.md  TINYMOS.md
ch04/addition/vms/: PROJECTS.md  README.md
ch04/sec4.10/cores/: README.md
ch04/sec4.10/cores/c/mandelbrot/twocores/: CMakeLists.txt  README.md  main.c
ch04/sec4.10/cores/c/particles/: CMakeLists.txt  README.md  display.c  main.c
ch04/sec4.11/power/: PROJECTS.md  README.md
ch04/sec4.11/power/lowpower/: CMakeLists.txt  README.md  display.c  main.c
ch04/sec4.12/: README.md
ch04/sec4.12/electro/: README.md
ch04/sec4.12/readymade/: README.md
ch04/sec4.2.2/: README.md
ch04/sec4.2.2/intro/: LIST.md  MOORE.md  README.md  SENSORS.md  USE.md
ch04/sec4.3.6/traffic/: README.md
ch04/sec4.3.8/temperature/: README.md
ch04/sec4.3/blink/: README.md
ch04/sec4.4/storage/: FLASH.md  HISTORY.md  README.md
ch04/sec4.5.2/wire/: README.md
ch04/sec4.5.2/wire/full/c/: CMakeLists.txt  controller.c  device.c
ch04/sec4.5.2/wire/hello/c/: CMakeLists.txt  reciever.c  sender.c
ch04/sec4.5.4/wireless/: README.md
ch04/sec4.7/display/: README.md
ch04/sec4.7/display/drivers/pack/01/: CMakeLists.txt  README.md  display.c  display.h  main.c
ch04/sec4.7/display/drivers/vga/simple/: CMakeLists.txt  README.md  test.c
ch04/sec4.7/display/graphics/images/c/colour/pico/: CMakeLists.txt  display.c  main.c  test_pattern.h
ch04/sec4.8/errors/: README.md
ch04/sec4.8/errors/display/: CMakeLists.txt  README.md  display.c  display.h  main.c
ch04/sec4.8/errors/simple/: CMakeLists.txt  README.md  display.c  main.c
ch04/sec4.9/timer/demo/c/: CMakeLists.txt  README.md  display.h  main.c
ch04/sec4.9/timer/reaction/c/: CMakeLists.txt  README.md  main.c
ch05/: README.md
ch06/: README.md
ch07/: README.md
ch07/sec7.3.7/ferrite/: Makefile  PROJECTS.md  README.md  ferrite.py
ch08/: README.md
ch08/addition/category/: README.md  TABLE.md  cat_demo.py
intro/: README.md
(+302 files in other folders)
