cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
project(interrupt_timer_example C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()
add_executable(interrupt_timer_example interrupt_timer_example.c display.c)
pico_enable_stdio_usb(interrupt_timer_example 1)
pico_enable_stdio_uart(interrupt_timer_example 0)
pico_add_extra_outputs(interrupt_timer_example)
target_link_libraries(interrupt_timer_example pico_stdlib hardware_dma hardware_spi hardware_gpio hardware_irq)